Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.10.1
-
Fix Version/s: 5.14.2, 5.15.0 Alpha
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:
-
Platform/s:
-
Commits:2f4c131805f4009f42abe991e0f92f096bbc55fd (qt/qtdeclarative/5.14)
Description
Following signal handler works:
property real __private_property
on__Private_propertyChanged: console.log("__private_property", __private_property)
But if I create such signal handler with Connections element in QML component where the property hasn't been defined within the same component
Connections {
target: item
on__Private_propertyChanged: console.log("__private_property", __private_property)
}
the component loading fails in error
Cannot assign to non-existent property "on__Private_propertyChanged"
If both the property and Connections element have been defined within the same QML document there is no error. If property uses normal camelCase there is no error.