Fix QQmlProperty and Connections for properties starting with '_'

We do a weird renaming for the change handler of properties starting
with '_', now we do it at least in a consistent way.

Fixes: QTBUG-82017
Change-Id: I1535a5ee462f3a344c972461f1fb954f039aa854
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>